--- a/templating/templates/content/faq.template.html
+++ b/templating/templates/content/faq.template.html
@@ -52,7 +52,7 @@
 
         <h5>I have more questions, how do I get in touch?</h5>
         <p>
-          You can contact us via Twitter: <a href="https://twitter.com/@ArtSimily">@ArtSimily</a> or via email: <span class="emrot">negfvzvyl@negfvzvyl.pbz</span>. We would love to hear from
+          You can contact us via Twitter: <a href="https://twitter.com/@ArtSimily">@ArtSimily</a> or via email: <span class="emailrot">negfvzvyl@negfvzvyl.pbz</span>. We would love to hear from
           you.
         </p>
       </div>
@@ -60,7 +60,7 @@
   </div>
 </main>
 <script type="text/javascript">
-    $(".emrot").each(function(){
+    $(".emailrot").each(function(){
         $( this ).html(rot13($( this ).html()));
     });
 </script>
