--- a/templating/templates/content/faq.template.html
+++ b/templating/templates/content/faq.template.html
@@ -52,7 +52,7 @@
 
         <h5>I have more questions, how do I get in touch?</h5>
         <p>
-          You can contact us via Twitter: <a href="https://twitter.com/@ArtSimily">@ArtSimily</a> or via email: artsimily@artsimily.com. We would love to hear from
+          You can contact us via Twitter: <a href="https://twitter.com/@ArtSimily">@ArtSimily</a> or via email: <a href="mailto:artsimily@artsimily.com">artsimily@artsimily.com</a>. We would love to hear from
           you.
         </p>
       </div>
