--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -10,7 +10,7 @@
       }
     </style>
     <div class="row">
-      <a class="btn-floating btn-large waves-effect waves-light green right" style="margin-bottom: 10px;" href="#helpModal">Help</a>
+      <a class="btn-floating btn-large waves-effect waves-light green left" style="margin-bottom: 10px;" href="#helpModal">Help</a>
     </div>
     <div class="row">
       <div class="col s12">
