updated start page

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -7,7 +7,7 @@
       <div class="col s12" style="font-size: 1.3em;">
         <b>What is ArtSimily about?</b><br>
         ArtSimily is a game where you try to rate digital art by their contextual similarity and the "better" your answers
-        are, the higher your score will get.<br><br>
+        are, the higher your score will get.<br>
         It is part of a research project to build/improve multimedia search engines.
       </div>
     </div>
@@ -19,8 +19,8 @@
         </div>
       </div>
     {{ELSE}}
-      <div class="row">
-        <div class="col s12 large center">
+      <div class="row large center">
+        <div class="col s12">
           Start playing by clicking the button below.
         </div>
       </div>
