fixed font size

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -20,7 +20,7 @@
       </div>
     {{ELSE}}
       <div class="row large center">
-        <div class="col s12">
+        <div class="col s12" style="font-size: 1.5em;">
           Start playing by clicking the button below.
         </div>
       </div>
