--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -10,6 +10,9 @@
         are, the higher your score will get.<br>
         It is part of a research project to build/improve multimedia search engines.
       </div>
+      <div class="col s12">
+        <img class="responsive-img" src="static/screenshot.png" alt="Screenshot">
+      </div>
     </div>
     {{IF [[oauth.isLoggedin()]]}}
       <div class="row black-text large center">
