added image to right side

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -4,13 +4,13 @@
   <div class="container">
     <h3>Welcome to ArtSimily</h3>
     <div class="row">
-      <div class="col s12" style="font-size: 1.3em;">
+      <div class="col s12 m6" style="font-size: 1.3em;">
         <b>What is ArtSimily about?</b><br>
         ArtSimily is a game where you try to rate digital art by their contextual similarity and the "better" your answers
         are, the higher your score will get.<br>
         It is part of a research project to build/improve multimedia search engines.
       </div>
-      <div class="col s12">
+      <div class="col s12 m6">
         <img class="responsive-img" src="static/screenshot.png" alt="Screenshot">
       </div>
     </div>
