--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -12,8 +12,8 @@
     <div class="row black-text">
       <div class="col s12 m12 center score-text">
         <br><br>Base Score:<br>
-        <span class="score-game">[[Util::number([[score.getVal('baseScore')]])]]</span><br>([[scorePosition]])<br><br>
-        <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br><br><br>
+        <span class="score-game">[[Util::number([[score.getVal('baseScore')]])]]</span><br>([[scorePosition]])<br><br><br>
+        <span class="score-bonus">Achievement multiplier: [[score.getVal('multiplicator')]]%</span><br><br>
         <span class="score-total">[[Util::number([[score.getVal('totalScore')]])]]</span><br>
       </div>
       {{IF [[sizeof([[achievements]])]] > 0}}
