updated front-page text according to comment

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -8,7 +8,8 @@
         <b>What is ArtSimily about?</b><br>
         ArtSimily is a game where you try to rate digital art by their contextual similarity and the "better" your answers
         are, the higher your score will get.<br>
-        It is part of a research project to build/improve multimedia search engines.
+        ArtSimily is part of a research project in the area of multimedia retrieval. By playing it, you help us build
+        the next generation of content-based search engines for all kinds of multimedia.
       </div>
       <div class="col s2"></div>
       <div class="col s8">
