updated screenshot classes

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col s2"></div>
       <div class="col s8">
-        <img class="responsive-img" src="static/screenshot.png" alt="Screenshot">
+        <img class="materialboxed z-depth-3 hoverable" src="static/screenshot.png" alt="Screenshot">
       </div>
     </div>
     {{IF [[oauth.isLoggedin()]]}}
