updated aligning on home page

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -11,8 +11,8 @@
         ArtSimily is part of a research project in the area of multimedia retrieval. By playing it, you help us build
         the next generation of content-based search engines for all kinds of multimedia.
       </div>
-      <div class="col s2"></div>
-      <div class="col s8">
+      <div class="col s12 m2"></div>
+      <div class="col s12 m8">
         <img class="responsive-img materialboxed z-depth-3 hoverable" src="static/screenshot.png" alt="Screenshot">
       </div>
     </div>
