updated download buttons fixed path on date check

--- a/templating/templates/content/data.template.html
+++ b/templating/templates/content/data.template.html
@@ -12,10 +12,10 @@
         <div class="row" style="text-align: center;">
             <div class="row">
               <div class="col s12 m6 l6">
-                <a href="data.php?get=full" class="btn waves-effect waves-light blue answer-button">Full Dataset</a>
+                <a href="data.php?get=full"><button class="btn waves-effect waves-light blue answer-button">Full Dataset</button></a>
               </div>
               <div class="col s12 m6 l6">
-                <a href="data.php?get=minimal" class="btn waves-effect waves-light blue answer-button">Minimal Dataset</a>
+                <a href="data.php?get=minimal"><button class="btn waves-effect waves-light blue answer-button">Minimal Dataset</button></a>
               </div>
             </div>
         </div>
